--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/f18600962f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <title>Users CRUD with Firebase and Vue</title>
+    <title>Users CRUD with Firebase and Vuejs</title>
 </head>
 
 <body>
